[tool.poetry]
name = "shapleybound"
version = "0.1.0-dev"
description = "Genetic Search for a lower bound of shapley values"
authors = [
    "Julian Stier <julian.stier@uni-passau.de>"
]
license = "MIT"

include = [
    "pyproject.toml",
    "README.md"
]

readme = "README.md"

keywords = ["shapley value", "coalitional games", "game theory", "shap"]

[tool.poetry.dependencies]
python = "^3.8"
importlib-metadata = "^4.4"
importlib-resources = "^5.0"
semantic_version = "^2.10"
deprecated = "^1.2.10"
numpy = "^1.22"
pyshapley = "^0.1"
s3fs = "^2023.3.0"
filelock = "^3.9.0"
"lockable.dev" = "^0.1.2"
pandas = "^1.5.3"
pyarrow = "^11.0.0"
joblib = "^1.2.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pre-commit = "^2.3.0"
pytest = "^7.1"

[tool.isort]
profile = "black"
line_length = 120
force_single_line = true
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
multi_line_output = 3
use_parentheses = true
filter_files = true
src_paths = ["shapleysearch", "tests"]
skip_glob = ["*/setup.py", "res/"]
known_first_party = "shapleysearch"
known_third_party = ["importlib_metadata", "importlib_resources", "pytest", "semantic_version"]

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | res
  | build
  | dist
  | tests/cache/
  | tests/.*/setup.py
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
